--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="https://fav.farm/😎" />
-	<link rel="stylesheet" href="/src/assets/scss/style.scss">
-	<title>FED23 API-utveckling Realtime Frontend</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="https://fav.farm/😎" />
+    <link rel="stylesheet" href="/src/assets/scss/style.scss" />
+    <title>FED23 API-utveckling Realtime Frontend</title>
+  </head>
 
-<body>
-	<div id="app"></div>
+  <body>
+    <div id="app"></div>
+    <!-- Här är nickname -->
+    <!-- text
 
-	<script type="module" src="/src/main.ts"></script>
-</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+-->
+    <!-- Slut på nickname -->
+
+    <!-- Lobby start -->
+    <!-- text
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+-->
+
+    <!-- Lobby slut -->
+
+    <!-- Spelvy -->
+
+    <!-- Spelvy slut -->
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
