--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,9 +100,33 @@
 
     <!-- Lobby slut -->
 
-    <!-- Spelvy -->
 
+
+
+
+	
+    <!-- Spelvy -->
+	<div id="scoreboard-wrapper" class="hide">
+		<h1 id="game-title">Wack a Virus!</h1>
+			<div id="gameBoard">
+		</div>
+	</div>
+
+	<div id="scoreboard-wrapper">
+		<h2 id="scoreboard-title">Scoreboard</h2>
+
+		<span class="you" id="your-score"></span>
+		<span>-</span>
+		<span class="opponent" id="opponent-score" ></span>
+
+		<div class="you" id="your-name">your name</div>
+		<div class="reaction-time">your time</div>
+
+		<div class="opponent" id="opponent-name">opponent name</div>
+		<div class="reaction-time">opponent time</div>
+	</div>
     <!-- Spelvy slut -->
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
