added html for nickname-container and css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,29 +10,34 @@
   </head>
 
   <body>
-    <div id="app"></div>
     <!-- Här är nickname -->
-    <!-- text
+    <div id="app">
+      <div id="nickname" class="container hide">
+        <form id="nickname-form">
+          <div class="mb-3">
+            <input
+              type="text"
+              id="nickname-input"
+              class="form-control form-control-lg"
+              required
+              placeholder="Skriv ditt namn för att starta spelet"
+            />
+          </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
--->
+          <button
+            type="submit"
+            id="connectBtn"
+            class="btn btn-success"
+            disabled
+          >
+            SPELA!
+          </button>
+        </form>
+      </div>
+    </div>
     <!-- Slut på nickname -->
-
     <!-- Lobby start -->
+
     <!-- text
 
 
