--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="app">
     <!-- Här är nickname -->
     <!-- text
 
@@ -106,26 +106,29 @@
 
 	
     <!-- Spelvy -->
-	<div id="scoreboard-wrapper" class="hide">
-		<h1 id="game-title">Wack a Virus!</h1>
-			<div id="gameBoard">
+	<h1 id="game-title">Wack a Virus!   🦠</h1>
+
+	<div id="game-wrapper">
+
+		<div id="gameBoard" class="hide"></div>
+		
+		<div id="scoreboard-wrapper">
+			<h2 id="scoreboard-title">Scoreboard</h2>
+
+			<span id="your-score" class="blue, score"></span>
+			<span class="score">-</span>
+			<span id="opponent-score" class="orange, score" ></span>
+
+			<div id="your-name" class="blue">Your name</div>
+			<div id="your-time" class="reaction-time">your time</div>
+
+			<div id="opponent-name" class="orange">Opponent name</div>
+			<div id="opponent-time" class="reaction-time">opponent time</div>
 		</div>
 	</div>
-
-	<div id="scoreboard-wrapper">
-		<h2 id="scoreboard-title">Scoreboard</h2>
-
-		<span class="you" id="your-score"></span>
-		<span>-</span>
-		<span class="opponent" id="opponent-score" ></span>
-
-		<div class="you" id="your-name">your name</div>
-		<div class="reaction-time">your time</div>
-
-		<div class="opponent" id="opponent-name">opponent name</div>
-		<div class="reaction-time">opponent time</div>
-	</div>
     <!-- Spelvy slut -->
+
+</div>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
