added class grid-wrapper and grid

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -112,7 +112,10 @@
       <h1 id="game-title">Wack a Virus! 🦠</h1>
 
       <div id="game-wrapper">
-        <div id="gameBoard" class="hide"></div>
+        <div class="grid-wrapper">
+            <div class="grid"></div>
+            <div id="gameBoard" class="hide"></div>
+        </div>
 
         <div id="scoreboard-wrapper">
           <h2 id="scoreboard-title">Scoreboard</h2>
