--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,8 @@
   <body>
     <div id="app">
       <!-- Här är nickname -->
-      <div id="app">
-        <div id="nickname" class="container hide">
+      <div>
+        <div id="nickname" class="container">
           <form id="nickname-form">
             <div class="mb-3">
               <input
@@ -42,96 +42,34 @@
         <button id="start-game" disabled>Start new game</button>
       </div>
       <!-- text
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
--->
-
-      <!-- Lobby slut -->
+      <Lobby slut -->
 
       <!-- Spelvy -->
-      <h1 id="game-title">Wack a Virus! 🦠</h1>
+      <div class="hide">
+        <h1 id="game-title">Wack a Virus! 🦠</h1>
 
-      <div id="game-wrapper">
-        <div class="grid-wrapper">
+        <div id="game-wrapper">
+          <div class="grid-wrapper">
             <div class="grid"></div>
             <div id="gameBoard" class="hide"></div>
+          </div>
+
+          <div id="scoreboard-wrapper">
+            <h2 id="scoreboard-title">Scoreboard</h2>
+
+            <span id="your-score" class="blue, score"></span>
+            <span class="score">-</span>
+            <span id="opponent-score" class="orange, score"></span>
+
+            <div id="your-name" class="blue">Your name</div>
+            <div id="your-time" class="reaction-time">your time</div>
+
+            <div id="opponent-name" class="orange">Opponent name</div>
+            <div id="opponent-time" class="reaction-time">opponent time</div>
+          </div>
         </div>
-
-        <div id="scoreboard-wrapper">
-          <h2 id="scoreboard-title">Scoreboard</h2>
-
-          <span id="your-score" class="blue, score"></span>
-          <span class="score">-</span>
-          <span id="opponent-score" class="orange, score"></span>
-
-          <div id="your-name" class="blue">Your name</div>
-          <div id="your-time" class="reaction-time">your time</div>
-
-          <div id="opponent-name" class="orange">Opponent name</div>
-          <div id="opponent-time" class="reaction-time">opponent time</div>
-        </div>
+        <!-- Spelvy slut -->
       </div>
-      <!-- Spelvy slut -->
     </div>
 
     <script type="module" src="/src/main.ts"></script>
