add Create a timer to show the time before the virus appears

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <div id="app">
       <!-- Här är nickname -->
       <div>
-        <div id="nickname" class="container">
+        <div id="nickname" class="container hide">
           <form id="nickname-form">
             <div class="mb-3">
               <input
@@ -45,13 +45,13 @@
       <Lobby slut -->
 
       <!-- Spelvy -->
-      <div class="hide">
+      <div>
         <h1 id="game-title">Wack a Virus! 🦠</h1>
 
         <div id="game-wrapper">
           <div class="grid-wrapper">
             <div class="grid"></div>
-            <div id="gameBoard" class="hide"></div>
+            <div id="gameBoard"></div>
           </div>
 
           <div id="scoreboard-wrapper">
