--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,6 +47,7 @@
       <!-- Spelvy -->
       <div>
         <h1 id="game-title">Wack a Virus! 🦠</h1>
+        <h3 id="round"></h3>
 
         <div id="game-wrapper">
           <div class="grid-wrapper">
