--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
             <!-- Spelare läggs till här med JavaScript -->
           </ul>
         </div>
-        <button id="start-game" disabled>Start new game</button>
+        <p id="message"></p>
       </div>
       <!-- text
       <Lobby slut -->
