--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,6 +39,8 @@
             <!-- Spelare läggs till här med JavaScript -->
           </ul>
         </div>
+        <div id="highscore-list"></div>
+
         <button id="start-game" disabled>Start new game</button>
       </div>
       <!-- text
