tried to fixed img

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,7 +52,9 @@
         <div id="game-wrapper">
           <div class="grid-wrapper">
             <div class="grid"></div>
-            <div id="gameBoard"></div>
+            <div id="gameBoard">
+       
+            </div>
           </div>
 
           <div id="scoreboard-wrapper">
