add logic ta start two player

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,9 +35,7 @@
         <h2>Welcome to the Lobby!</h2>
         <div id="player-list" class="mb-3">
           <h3>Connected Players:</h3>
-          <ul id="players">
-            <!-- Spelare läggs till här med JavaScript -->
-          </ul>
+          <ul id="players"></ul>
         </div>
         <p id="message"></p>
       </div>
