changed names and class of score element

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,15 +60,17 @@
           <div id="scoreboard-wrapper">
             <h2 id="scoreboard-title">Scoreboard</h2>
 
-            <span id="your-score" class="blue, score"></span>
-            <span class="score">-</span>
-            <span id="opponent-score" class="orange, score"></span>
+            <div id="score-wrapper">
+              <span id="player1-score" class="blue">0</span>
+              <span>-</span>
+              <span id="player2-score" class="orange">0</span>
+            </div>
 
-            <div id="your-name" class="blue">Your name</div>
-            <div id="your-time" class="reaction-time">your time</div>
+            <div id="player1-name" class="blue">Player 1</div>
+            <div id="player1-time" class="reaction-time">time</div>
 
-            <div id="opponent-name" class="orange">Opponent name</div>
-            <div id="opponent-time" class="reaction-time">opponent time</div>
+            <div id="player2-name" class="orange">Player 2</div>
+            <div id="player2-time" class="reaction-time">time</div>
           </div>
         </div>
         <!-- Spelvy slut -->
