added soundeffect and more style

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,14 +46,14 @@
 
       <!-- Spelvy -->
       <div>
-        <h1 id="game-title">Wack a Virus! 🦠</h1>
+        <h1 id="game-title">Whack a Virus! 🦠</h1>
         <h3 id="round"></h3>
 
         <div id="game-wrapper">
           <div class="grid-wrapper">
             <div class="grid"></div>
             <div id="gameBoard">
-       
+              <audio id="clickSound" src="src/assets/sounds/mixkit-explainer-video-game-alert-sweep-236.wav"></audio>
             </div>
           </div>
 
