saved highscore in backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,8 @@
         </div>
         
         <p id="message"></p>
-        <div id="highscore-list"></div>
+        <ul id="highscoreList"></ul>
+        <ul id="matchHistoryList"></ul>
       </div>
       <!-- text
       <Lobby slut -->
