--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,7 +37,7 @@
           <h3>Connected Players:</h3>
           <ul id="players"></ul>
         </div>
-        
+
         <p id="message"></p>
         <div id="highscore-list"></div>
       </div>
@@ -53,7 +53,10 @@
           <div class="grid-wrapper">
             <div class="grid"></div>
             <div id="gameBoard">
-              <audio id="clickSound" src="src/assets/sounds/mixkit-explainer-video-game-alert-sweep-236.wav"></audio>
+              <audio
+                id="clickSound"
+                src="/sounds/mixkit-explainer-video-game-alert-sweep-236.wav"
+              ></audio>
             </div>
           </div>
 
