--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,10 +24,14 @@
                 placeholder="Write your name"
               />
             </div>
-
             <button type="submit" id="connectBtn" disabled>Move on!</button>
           </form>
-        </div>
+      </div>
+      <div id="highscoreContainer">
+        <h3>Highscore:</h3>
+        <ul id="highscoreList"></ul>
+        <h3>Latest Matches:</h3>
+        <ul id="matchHistoryList"></ul>
       </div>
       <!-- Slut på nickname -->
       <!-- Lobby start -->
@@ -39,8 +43,6 @@
         </div>
 
         <p id="message"></p>
-        <ul id="highscoreList"></ul>
-        <ul id="matchHistoryList"></ul>
       </div>
       <!-- text
       <Lobby slut -->
