css for highscore

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,11 +27,14 @@
             <button type="submit" id="connectBtn" disabled>Move on!</button>
           </form>
       </div>
-      <div id="highscoreContainer">
-        <h3>Highscore:</h3>
-        <ul id="highscoreList"></ul>
-        <h3>Latest Matches:</h3>
-        <ul id="matchHistoryList"></ul>
+      <div class="parent">
+        <div id="highscoreContainer">
+          <h3>Highscore:</h3>
+          <ul id="highscoreList"></ul>
+          <h3>Latest Matches:</h3>
+          <ul id="matchHistoryList"></ul>
+          </div>
+       
       </div>
       <!-- Slut på nickname -->
       <!-- Lobby start -->
