added div id gameresult and socket.on(gameEnded)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,6 +80,11 @@
 
             <div id="player2-name" class="orange">Player 2</div>
             <div id="player2-time" class="reaction-time">time</div>
+
+            <div id="gameResults">
+              <h3 id="winner"></h3>
+            </div>
+
           </div>
         </div>
         <!-- Spelvy slut -->
