added popup div and style, changed socket.on(gameended)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,11 +81,22 @@
             <div id="player2-name" class="orange">Player 2</div>
             <div id="player2-time" class="reaction-time">time</div>
 
-            <div id="gameResults">
-              <h3 id="winner"></h3>
-            </div>
-
           </div>
+
+          <div id="custom-confirm" class="popup hide">
+            <div class="popup-content">
+
+              <div id="gameResults">
+                <p id="winner"></p>
+              </div>
+            
+              <p>Want a rematch?</p>
+              <button type="button" id="rematch-yes">Yes</button>
+              <button type="button" id="rematch-no">No</button>
+            </div>
+          </div>
+
+        
         </div>
         <!-- Spelvy slut -->
       </div>
