added custom popup and end game gif

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -96,7 +96,8 @@
             </div>
           </div>
 
-        
+           <img id="gif-image" src="https://media.giphy.com/media/Vjyi7huyBwn6USw3Ei/giphy.gif" class="hide" alt="Bye GIF with baby dragon">
+      
         </div>
         <!-- Spelvy slut -->
       </div>
